cabal-version: 2.4
name: DirBuster
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable DirBuster
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        bytestring -any,
        aeson -any,
        text -any,
        base -any,
        http-conduit -any,
        network-uri -any,
        optparse-applicative -any,
        exceptions -any
